# arwm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  arwm  config.c  config.conf  config.h  main.c  orbitalwm  wm.c  wm.h
.github/workflows/: build.yml
config/: arwm.toml  autostart.sh  default.conf
include/: arwm.h  client.h  config.h  events.h  ewmh.h  ipc.h  keybinds.h  layout.h  monitor.h  util.h
scripts/: arwm-session  autostart.sh  bootstrap.sh  install.sh  uninstall.sh
share/applications/: arwm.desktop
share/man/: arwm.1
share/xsessions/: arwm.desktop
src/: arwm-msg.c  client.c  config.c  config.rs  events.c  events.rs  ewmh.c  ipc.c  keybinds.c  keys.rs  layout.c  layout.rs  main.c  main.rs  monitor.c  util.c  util.rs  wm.c  wm.rs
