[package]
name = "arwm"
version = "0.1.0"
edition = "2021"
authors = ["ARWM Maintainer"]
description = "A minimal, modern tiling window manager for X11 written in Rust."

[dependencies]
xcb = "1.2"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
